

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
select = [
    "A",
    "B",
    "E",
    "F",
    "ISC",
    "UP",
    "RUF",
    "SIM",
    "ARG",
    "PD",
    "PLE",
    "PLR",
    "PLW"
]
ignore = [
    "E712",
    "E501"
]

[tool.ruff.per-file-ignores]
"src/tests/*" = ["PLR2004"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]


[tool.mypy]
python_version = "3.11"

exclude = [
    'severa/models\.py$',
    'severa/fetch\.py$',
 ]
[tool.poetry]
name = "tie-dashboard"
version = "0.1.0"
description = ""
authors = ["Ville <ville.reima@tietoa.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pandas = "^2.2.2"
pydantic = "^2.8.2"
orjson = "^3.10.6"
slack-sdk = "^3.31.0"
openai-async = "^0.0.3"
pandera = "^0.20.1"
loguru = "^0.7.2"
croniter = "^2.0.5"
workalendar = "^17.0.0"
pymongo = "^4.8.0"
httpx = "^0.27.0"
arrow = "^1.3.0"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
